﻿[B][COLOR=FF56ADDA]v4.1.5[/COLOR][/B]
• Fixed: More AmbilightMode things
• Added: Switch to toggle between Unwatched/Watched/Hidden watched flag indicator 
• Replaced: InLibrary overlay icon

[B][COLOR=FF56ADDA]v4.1.4b[/COLOR][/B]
Not my day....
• Fixed: More vignette issues
• Fixed: Not working Playlist button on MusicOSD
• Added: ThumbList view to playlists

[B][COLOR=FF56ADDA]v4.1.4a[/COLOR][/B]
Quick update release to fix the non working visualisation settings dialog
• Fixed: Not working visualisation settings window
• Fixed: Fixed "doubled" vignette if the music player shows the info panel
• Added: Music visualisation settings to the skin settings

[B][COLOR=FF56ADDA]v4.1.4[/COLOR][/B]
• Fixed: Image fadetime issues with latest nightlie of Kodi
• Added: Optional disc art for ThumbList view (music)
• Added: Optional handwritten music disc art style instead of using local stored cdart.png's
• Removed: Old Ambilight option
• Added: Ambilight Compatiblity Mode (Diffused effects on the borders for all visualisation settings)
• Fixed: Thumbnail View fallback icons
• Fixed: Thumb List fallback icons
• Fixed: Some CDArt animation conditions
• Fixed: Visualisation fanart animation

[B][COLOR=FF56ADDA]v4.1.3[/COLOR][/B]
Just a small bugfix release
• Fixed: Optional Kodi-Intro issue with the "currently playing" notification
• Fixed: PlayerControls focus texture dimensions (QuickNav element)
• Fixed: PlayerControls MiniPlayer thumb for movies/episodes with non-available poster art
• Fixed: Lyrics overlay and MusicOSD issue if the MusicOSD was active before the lyrics
• Fixed: Not working fallback to a set multi-image of a main menu item if the widget has no own fanart

[B][COLOR=FF56ADDA]v4.1.2[/COLOR][/B]
• Fixed: Overlapping issue with setttings level button
• Fixed: Wrong up/down conditions on ThumbList view
• Fixed: Not working kiosk mode
• Added: Option to diffuse widget fanarts
• Added: "Unwatched Movies" for movie widgets
• Added: CU LRC Lyrics window 