@@ -39,59 +39,22 @@
 					<visible>Skin.HasSetting(HomeMenuAnimation) + !Skin.HasSetting(DisablePurpleBar)</visible>
 				</control>
 
-				<!--<control type="group">
-					<include>WidgetMainMenuSlideAnimations</include>
-					<animation effect="zoom" time="0" tween="0" easing="0" start="100" end="25" center="635,200" condition="true">Conditional</animation>
-					<top>262</top>
-					<left>419</left>
-					<width>734</width>
-					<height>275</height>
-					<control type="image">
-						<left>-121.5</left>
-						<top>5</top>
-						<width>116.5</width>
-						<height>167.5</height>
-						<aspectratio align="center" aligny="center" scalediffuse="false">stretch</aspectratio>
-						<texture background="true" diffuse="osd/widgets/poster_diffuse.png">$INFO[Container(250).ListItem(0).Thumb]</texture>
-						<fadetime>800</fadetime>
-					</control> 
-					<control type="image">
-						<left>22</left>
-						<top>5</top>
-						<width>116.5</width>
-						<height>167.5</height>
-						<aspectratio align="center" aligny="center" scalediffuse="false">stretch</aspectratio>
-						<texture background="true" diffuse="osd/widgets/poster_diffuse.png">$INFO[Container(250).ListItem(1).Thumb]</texture>
-						<fadetime>800</fadetime>
-					</control> 
-					<control type="image">
-						<left>166</left>
-						<top>5</top>
-						<width>116.5</width>
-						<height>167.5</height>
-						<aspectratio align="center" aligny="center" scalediffuse="false">stretch</aspectratio>
-						<texture background="true" diffuse="osd/widgets/poster_diffuse.png">$INFO[Container(250).ListItem(2).Thumb]</texture>
-						<fadetime>800</fadetime>
+				<control type="group" id="16">
+					<visible>!Skin.HasSetting(HideLibraryStats) + [StringCompare(Container(20).ListItem.Property(defaultID),movies) | StringCompare(Container(20).ListItem.Property(defaultID),music) | StringCompare(Container(20).ListItem.Property(defaultID),tvshows)]</visible>
+					<control type="label" id="17">
+						<label>$VAR[LibraryInfoLabel]</label>			
+						<include>TopButton</include>
 					</control>
-					<control type="image">
-						<left>310</left>
-						<top>5</top>
-						<width>116.5</width>
-						<height>167.5</height>
-						<aspectratio align="center" aligny="center" scalediffuse="false">stretch</aspectratio>
-						<texture background="true" diffuse="osd/widgets/poster_diffuse.png">$INFO[Container(250).ListItem(3).Thumb]</texture>
-						<fadetime>800</fadetime>
+					<control type="label" id="18">
+						<label>$VAR[LibraryInfoLabel2]</label>
+						<include>TopButton</include>
 					</control>
-					<control type="image">
-						<left>454</left>
-						<top>5</top>
-						<width>116.5</width>
-						<height>167.5</height>
-						<aspectratio align="center" aligny="center" scalediffuse="false">stretch</aspectratio>
-					<texture background="true" diffuse="osd/widgets/poster_diffuse.png">$INFO[Container(250).ListItem(4).Thumb]</texture>
-						<fadetime>800</fadetime>
-					</control>	
-				</control>-->
+					<control type="label" id="19">
+						<label>$VAR[LibraryInfoLabel3]</label>
+						<include>TopButton</include>
+					</control>
+				</control>
+
 
 				<control type="wraplist" id="20">
 					<include>WidgetMainMenuSlideAnimations</include>
@@ -135,8 +98,7 @@
 							<label>$INFO[ListItem.Label]</label>
 						</control>
 					</itemlayout>
-					<focusedlayout width="500">
-						<control type="group">
+					<focusedlayout width="500">						
 							<animation type="Conditional" condition="!ControlGroup(21).HasFocus + !Window.IsVisible(Selectdialog)">
 								<effect type="zoom" start="80" end="100" time="200" tween="sine" easing="out" center="318,200" />
 								<effect type="fade" start="35" end="100" time="200" tween="sine" easing="out" />
@@ -150,9 +112,30 @@
 								<font>FontSize_100</font>
 								<align>center</align>
 								<label>$INFO[ListItem.Label]</label>
+							</control>			
+							<control type="fadelabel">
+								<visible>!Skin.HasSetting(HideLibraryStats) + Control.HasFocus(20) + !IsEmpty(Control.GetLabel(17))</visible>
+								<animation effect="fade" time="250">Visible</animation>
+								<animation effect="fade" time="0">Hidden</animation>
+								<left>-15</left>
+								<top>264</top>		
+								<width>530</width>
+								<height>18</height>
+								<textcolor>77white</textcolor>
+								<shadowcolor>55000000</shadowcolor>
+								<font>FontSize_16</font>
+								<align>center</align>			
+								<label>$INFO[Control.GetLabel(17)]</label>						
+								<label>$INFO[Control.GetLabel(18)]</label>						
+								<label>$INFO[Control.GetLabel(19)]</label>
+								<scroll>false</scroll>
+								<scrollout>false</scrollout>
+								<scrollspeed>100</scrollspeed>
+								<pauseatend>4000</pauseatend>						
 							</control>
 							<control type="group">
 								<visible>Control.HasFocus(20)</visible>
+								<animation effect="slide" time="0" start="0,0" end="0,27" condition="Control.IsVisible(16) + !IsEmpty(Control.GetLabel(17))">Conditional</animation>
 								<animation effect="fade" time="250">Visible</animation>
 								<animation effect="fade" time="0">Hidden</animation>
 								<control type="image" id="201">
@@ -189,7 +172,7 @@
 									</animation>
 								</control>
 							</control>
-						</control>
+						
 					</focusedlayout>
 					<content>
 						<include>skinshortcuts-mainmenu</include>
