@@ -1,7 +1,11 @@
 ﻿[B][COLOR=FF56ADDA]v4.1.5[/COLOR][/B]
-• Fixed: More AmbilightMode things
 • Added: Switch to toggle between Unwatched/Watched/Hidden watched flag indicator 
+• Added: Library statistic labels in the home menu (can be disabled)
 • Replaced: InLibrary overlay icon
+• Fixed: More AmbilightMode things
+• Fixed: ThumbNail view episode flag for focused item
+• Fixed: NetFilx landscape fanart conditions. Nobody does noticed that bugs lol.
+• Added: NetFilx - Season info label on the thumbnail
 
 [B][COLOR=FF56ADDA]v4.1.4b[/COLOR][/B]
 Not my day....
